set (JNI_INCLUDE $ENV{JAVA_HOME}/include $ENV{JAVA_HOME}/include/linux)

include_directories(${JNI_INCLUDE})

aux_source_directory(${CMAKE_CURRENT_SOURCE_DIR} NAVAGRAHA_JNI)

add_library(navajni SHARED
    ${NAVAGRAHA_JNI}
    ${NAVAGRAHA_EXTENSIONS}
    ${NAVAGRAHA_EXTENSIONS}
    ${NAVAGRAHA_HTTP_CLIENT}
    ${NAVAGRAHA_KUBEENT}
    ${NAVAGRAHA_KUBE_API}
    ${NAVAGRAHA_DOCKERENT}
    ${NAVAGRAHA_DOCKER_API}
    ${NAVAGRAHA_CLI}
    ${NAVAGRAHA_CLI_ARG}
    ${NAVAGRAHA_GIT}
    )
